@@ -1,7 +1,6 @@
 package com.backend.server.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
@@ -38,7 +37,7 @@ public class RoleService {
                 roleNames
                     .stream()
                     .map(name -> new Role(name))
-                    .collect(Collectors.toList())
+                    .toList()
             );
         }
     }
